--- a/Profiling.ipynb
+++ b/Profiling.ipynb
@@ -2927,7 +2927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -2945,20 +2945,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2019.06.26-12:16:17] \t\tTN: 108, FP: 0, FN: 0, TP: 3\n",
-      "[2019.06.26-12:16:17] \t\tAccuracy: 1.0000\n",
-      "[2019.06.26-12:16:17] \t\tPrecision: 1.0000\n",
-      "[2019.06.26-12:16:17] \t\tRecall: 1.0000\n"
+      "[2019.06.26-14:13:54] \t\tTN: 108, FP: 0, FN: 0, TP: 12\n",
+      "[2019.06.26-14:13:54] \t\tAccuracy: 1.0000\n",
+      "[2019.06.26-14:13:54] \t\tPrecision: 1.0000\n",
+      "[2019.06.26-14:13:54] \t\tRecall: 1.0000\n"
      ]
     }
    ],
    "source": [
     "def get_rand(container):\n",
-    "    return container[random.randint(0,len(container))]\n",
+    "    return container[random.randint(0,len(container) - 1)]\n",
     "\n",
     "results = []\n",
     "\n",
-    "for _ in range(1):\n",
+    "for _ in range(4):\n",
     "    for infected_ip in infected_test:\n",
     "            selected = df[df['ip_src'] == infected_ip].copy()\n",
     "            selected['duration'] += get_rand(duration_alterations)\n",
@@ -2975,6 +2975,13 @@
     "\n",
     "utils.print_stats(labels, np.array(r_all) < threshold, logger)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -2998,10 +3005,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
